[package]
name = "rnum"
version = "0.0.1"
edition = "2021"
authors = ["Eli Fischl <vio@ocf.berkeley.edu>","Patrick Unick <dev_storm@winux.com>"]
license = "MIT"
keywords = ["math", "calculus", "algorithms", "optimization"]
repository = "https://github.com/Vio-Eli/rnum"
description = "RNum is a cutting-edge library for advanced mathematical calculations, designed for efficient and fast numerical computations and data analysis. It offers Mathematica-like syntax in a pure Rust environment."

[lib]

[dependencies]
